<resources>
    <string name="app_name">Assignment_footage</string>
    <string name="menu_title">Menu</string>
    <string name="menu_new">New Footage</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_back">Back</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_record">Record</string>
    <string name="btn_back">Back</string>
    <string name="btn_newLocation">New Location</string>
    <string name="btn_photo">Select Photo or Camera</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="content">Content:</string>
    <string name="record">Record</string>
    <string name="locationRecord">Location Record</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="time">Time:</string>
    <string name="total_distance">Total Distance:</string>
    <string name="total_count">Total Count:</string>
    <string name="total_time">Time spent:</string>
    <string name="address">Address:</string>
    <string name="noteHere">Note Here...</string>
    <string name="recording">Recording...</string>
</resources>
