<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationRecordNew">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:id="@+id/ll_LocationRecord"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/ll_RecordTime"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/tv_RecordTime"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/ll_Longitude"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/tv_Longitude"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/ll_Latitude"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/tv_Latitude"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_LocationRecord"
        android:visibility="invisible"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/ll_Note">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:id="@+id/iv_NotePhoto"/>
        <TextView
            android:layout_width="0dp"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#969494"
            android:id="@+id/tv_NoteComment"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="#F0FF8585"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_LocationRecord"
        android:id="@+id/ll_NoteNew">

        <ImageButton
            android:id="@+id/ib_addNote"
            android:padding="20dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_add" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:background="#00CCFF"
        android:text="@string/btn_back"
        android:id="@+id/btn_back"/>
</android.support.constraint.ConstraintLayout>